Encode the icon direct into the HTML
... to avoid 10.10s sandbox restrictions - using chrisridd's trick

--- a/matlabQL/index.html
+++ b/matlabQL/index.html
@@ -83,7 +83,7 @@
                     
     </head>
     <div id="header">
-		<img class="icon" alt="Document Icon" src="cid:icon.tiff" height="128" width="128" />
+		<img class="icon" alt="Document Icon" src="%image%" height="128" width="128" />
         
 		<table style="margin-top: 10px">
 	        <tr><td></td><td><h1>%name%</h1></td></tr>
